# personal-chief

./: .gitignore  pyproject.toml
.claude/: settings.local.json
app/agent/: personal_chief.py
app/api/v1/: chat.py
app/db/: personal_chief.db
